fix contrast

--- a/client/web/src/repo/tree/TreePage.module.scss
+++ b/client/web/src/repo/tree/TreePage.module.scss
@@ -100,6 +100,14 @@
     padding-top: 0.125rem;
 }
 
+.card-col-header-wrapper {
+    background-color: var(--color-bg-2);
+
+    a {
+        color: var(--link-color-2);
+    }
+}
+
 .card-col-header {
     overflow: hidden;
     white-space: nowrap;
